--- a/task-mgr.service
+++ b/task-mgr.service
@@ -4,15 +4,15 @@ After=network.target
 
 [Service]
 Type=simple
-User=jeblqr
-WorkingDirectory=/home/jeblqr/data1/projects/task-mgr/server
-# Assumes 'install.sh' builds release binary or we run cargo run for dev-like prod
-# Ideally point to release binary
-ExecStart=/home/jeblqr/data1/projects/task-mgr/server/target/release/server
+User=root
+WorkingDirectory=/opt/task-mgr
+ExecStart=/opt/task-mgr/server/task-mgr-server
 Restart=always
 RestartSec=3
 Environment=RUST_LOG=info
 Environment=PORT=3000
+Environment=WEB_ROOT=/opt/task-mgr/web
+Environment=DATABASE_URL=sqlite:///opt/task-mgr/tasks.db
 
 [Install]
 WantedBy=multi-user.target
